--- a/src/App.scss
+++ b/src/App.scss
@@ -2,16 +2,17 @@ $form-h1-title: 3em;
 
 .app {
     display: grid;
-    grid-template-columns: 30% 40% 30%;
+    grid-template-columns: 50% 50%;
     grid-template-rows: auto;
+    padding: 50pt;
 
     .form-container {
-        grid-column: 2;
+        background: rgba(114, 214, 228, 0.475);
+        grid-column: 1;
         margin: 50pt 0pt 50pt 0pt;
         display: grid;
         grid-template-columns: 10% 80% 10%;
         grid-template-rows: ($form-h1-title*2.5) auto;
-        background: rgba(114, 214, 228, 0.475);
         padding-bottom: $form-h1-title;
         border-radius: 10pt;
     
@@ -62,6 +63,61 @@ $form-h1-title: 3em;
                 border-radius: 5pt;
                 float: right;
                 margin-top: 20pt;
+                height: 30pt;
+                width: 90pt;
+                font-size: 1.2em;
+            }
+            button:focus {
+                outline: 0;
+            }
+        }
+    }
+
+    .localstorage-info-container{
+        display: grid;
+        grid-template-columns: 10% 80% 10%;
+        grid-template-rows: auto;
+        margin: 50pt 0pt 50pt 0pt;
+        
+        .info-table{
+            grid-column: 2;
+            background: rgb(236, 112, 54);
+            border-radius: 10pt;
+            grid-column: 2;
+
+            h1 {
+                text-align: center;
+                font-size: $form-h1-title;
+                font-weight: 400;
+                margin-bottom: $form-h1-title/2 ;
+            }
+
+            label {
+                display: block;
+                font-size: 2em;
+                margin: 20pt 30pt 0 20pt;
+                span {
+                    background: white;
+                    display: block;
+                    font-size: 0.8em;
+                    height: 1em;
+                    line-height: 1em;
+                    font-weight: 300;
+                    padding: 2pt 5pt 2pt 5pt;
+                    width: 100%;
+                    margin-top: 5pt;
+                    border-radius: 5pt;
+                    border: 0pt;
+                }
+            }
+
+            button {
+                background: white;
+                border: 0pt;
+                border-radius: 5pt;
+                float: right;
+                margin-top: 20pt;
+                margin-right: 20pt;
                 height: 30pt;
                 width: 90pt;
                 font-size: 1.2em;
