--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,15 +1,17 @@
 .app {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 30% 40% 30%;
-      grid-template-columns: 30% 40% 30%;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
   -ms-grid-rows: auto;
       grid-template-rows: auto;
+  padding: 50pt;
 }
 
 .app .form-container {
-  -ms-grid-column: 2;
-  grid-column: 2;
+  background: rgba(114, 214, 228, 0.475);
+  -ms-grid-column: 1;
+  grid-column: 1;
   margin: 50pt 0pt 50pt 0pt;
   display: -ms-grid;
   display: grid;
@@ -17,7 +19,6 @@
       grid-template-columns: 10% 80% 10%;
   -ms-grid-rows: 7.5em auto;
       grid-template-rows: 7.5em auto;
-  background: rgba(114, 214, 228, 0.475);
   padding-bottom: 3em;
   border-radius: 10pt;
 }
@@ -82,6 +83,68 @@
 }
 
 .app .form-container form button:focus {
+  outline: 0;
+}
+
+.app .localstorage-info-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10% 80% 10%;
+      grid-template-columns: 10% 80% 10%;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  margin: 50pt 0pt 50pt 0pt;
+}
+
+.app .localstorage-info-container .info-table {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  background: #ec7036;
+  border-radius: 10pt;
+  -ms-grid-column: 2;
+  grid-column: 2;
+}
+
+.app .localstorage-info-container .info-table h1 {
+  text-align: center;
+  font-size: 3em;
+  font-weight: 400;
+  margin-bottom: 1.5em;
+}
+
+.app .localstorage-info-container .info-table label {
+  display: block;
+  font-size: 2em;
+  margin: 20pt 30pt 0 20pt;
+}
+
+.app .localstorage-info-container .info-table label span {
+  background: white;
+  display: block;
+  font-size: 0.8em;
+  height: 1em;
+  line-height: 1em;
+  font-weight: 300;
+  padding: 2pt 5pt 2pt 5pt;
+  width: 100%;
+  margin-top: 5pt;
+  border-radius: 5pt;
+  border: 0pt;
+}
+
+.app .localstorage-info-container .info-table button {
+  background: white;
+  border: 0pt;
+  border-radius: 5pt;
+  float: right;
+  margin-top: 20pt;
+  margin-right: 20pt;
+  height: 30pt;
+  width: 90pt;
+  font-size: 1.2em;
+}
+
+.app .localstorage-info-container .info-table button:focus {
   outline: 0;
 }
 
