--- a/src/App.scss
+++ b/src/App.scss
@@ -6,74 +6,79 @@ $form-h1-title: 3em;
     grid-template-rows: auto;
     padding: 50pt;
 
-    .form-container {
-        background: rgba(114, 214, 228, 0.475);
-        grid-column: 1;
-        margin: 50pt 0pt 50pt 0pt;
+    .left{
         display: grid;
         grid-template-columns: 10% 80% 10%;
-        grid-template-rows: ($form-h1-title*2.5) auto;
-        padding-bottom: $form-h1-title;
-        border-radius: 10pt;
+        grid-template-rows: auto;
+        margin: 50pt 0pt 50pt 0pt;
+
+        .form-container {
+            grid-column: 2;
+            background: rgba(114, 215, 228, 0.739);
+            border-radius: 10pt;
+        
+            h1 {
+                text-align: center;
+                font-size: $form-h1-title;
+                font-weight: 400;
+                margin-bottom: $form-h1-title/2 ;
+            }
     
-        h1 {
-            grid-column: 2;
-            text-align: center;
-            font-size: $form-h1-title;
-            font-weight: 400;
-        }
+            form {
 
-        form {
-            grid-column: 2;
-            text-align: left;
-
-            label {
-                display: block;
-                font-size: 2em;
-                margin-top: 20pt;
-                input {
+                label {
                     display: block;
-                    font-size: 0.8em;
-                    font-weight: 300;
-                    padding: 2pt 5pt 2pt 5pt;
-                    width: 100%;
-                    margin-top: 5pt;
-                    border-radius: 5pt;
-                    border: 0pt;
+                    font-size: 2em;
+                    margin: 20pt 30pt 0 20pt;
+                    input {
+                        background: white;
+                        display: block;
+                        font-size: 0.8em;
+                        height: 1em;
+                        line-height: 1em;
+                        font-weight: 300;
+                        padding: 2pt 5pt 2pt 5pt;
+                        width: 100%;
+                        margin-top: 5pt;
+                        border-radius: 5pt;
+                        border: 0pt;
+                    }
+                    input:focus {
+                        outline: 0;
+                    }
+    
+                    .form-error{
+                        margin-top: 5pt;
+                        padding: 0 5pt;
+                        border: solid 0pt red;
+                        width: fit-content;
+                        border-color: red;
+                        border-radius: 5px;
+                        color: red;
+                        font-size: 12pt;
+                    }
                 }
-                input:focus {
+    
+                button {
+                    background: white;
+                    border: 0pt;
+                    border-radius: 5pt;
+                    float: right;
+                    margin: 20pt;
+                    height: 30pt;
+                    width: 90pt;
+                    font-size: 1.2em;
+                }
+                button:focus {
                     outline: 0;
                 }
-
-                .form-error{
-                    margin-top: 5pt;
-                    padding: 0 5pt;
-                    border: solid 0pt red;
-                    width: fit-content;
-                    border-color: red;
-                    border-radius: 5px;
-                    color: red;
-                    font-size: 12pt;
-                }
             }
-
-            button {
-                background: white;
-                border: 0pt;
-                border-radius: 5pt;
-                float: right;
-                margin-top: 20pt;
-                height: 30pt;
-                width: 90pt;
-                font-size: 1.2em;
-            }
-            button:focus {
-                outline: 0;
             }
         }
     }
+    
 
-    .localstorage-info-container{
+    .right{
         display: grid;
         grid-template-columns: 10% 80% 10%;
         grid-template-rows: auto;
@@ -83,7 +88,6 @@ $form-h1-title: 3em;
             grid-column: 2;
             background: rgb(236, 112, 54);
             border-radius: 10pt;
-            grid-column: 2;
 
             h1 {
                 text-align: center;
@@ -116,8 +120,7 @@ $form-h1-title: 3em;
                 border: 0pt;
                 border-radius: 5pt;
                 float: right;
-                margin-top: 20pt;
-                margin-right: 20pt;
+                margin: 20pt;
                 height: 30pt;
                 width: 90pt;
                 font-size: 1.2em;
@@ -126,7 +129,6 @@ $form-h1-title: 3em;
                 outline: 0;
             }
         }
-    }
 }
 
 .invalid-input{
