--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,85 +8,7 @@
   padding: 50pt;
 }
 
-.app .form-container {
-  background: rgba(114, 214, 228, 0.475);
-  -ms-grid-column: 1;
-  grid-column: 1;
-  margin: 50pt 0pt 50pt 0pt;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 10% 80% 10%;
-      grid-template-columns: 10% 80% 10%;
-  -ms-grid-rows: 7.5em auto;
-      grid-template-rows: 7.5em auto;
-  padding-bottom: 3em;
-  border-radius: 10pt;
-}
-
-.app .form-container h1 {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  text-align: center;
-  font-size: 3em;
-  font-weight: 400;
-}
-
-.app .form-container form {
-  -ms-grid-column: 2;
-  grid-column: 2;
-  text-align: left;
-}
-
-.app .form-container form label {
-  display: block;
-  font-size: 2em;
-  margin-top: 20pt;
-}
-
-.app .form-container form label input {
-  display: block;
-  font-size: 0.8em;
-  font-weight: 300;
-  padding: 2pt 5pt 2pt 5pt;
-  width: 100%;
-  margin-top: 5pt;
-  border-radius: 5pt;
-  border: 0pt;
-}
-
-.app .form-container form label input:focus {
-  outline: 0;
-}
-
-.app .form-container form label .form-error {
-  margin-top: 5pt;
-  padding: 0 5pt;
-  border: solid 0pt red;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  border-color: red;
-  border-radius: 5px;
-  color: red;
-  font-size: 12pt;
-}
-
-.app .form-container form button {
-  background: white;
-  border: 0pt;
-  border-radius: 5pt;
-  float: right;
-  margin-top: 20pt;
-  height: 30pt;
-  width: 90pt;
-  font-size: 1.2em;
-}
-
-.app .form-container form button:focus {
-  outline: 0;
-}
-
-.app .localstorage-info-container {
+.app .left {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 10% 80% 10%;
@@ -96,29 +18,27 @@
   margin: 50pt 0pt 50pt 0pt;
 }
 
-.app .localstorage-info-container .info-table {
+.app .left .form-container {
   -ms-grid-column: 2;
   grid-column: 2;
-  background: #ec7036;
+  background: rgba(114, 215, 228, 0.739);
   border-radius: 10pt;
-  -ms-grid-column: 2;
-  grid-column: 2;
 }
 
-.app .localstorage-info-container .info-table h1 {
+.app .left .form-container h1 {
   text-align: center;
   font-size: 3em;
   font-weight: 400;
   margin-bottom: 1.5em;
 }
 
-.app .localstorage-info-container .info-table label {
+.app .left .form-container form label {
   display: block;
   font-size: 2em;
   margin: 20pt 30pt 0 20pt;
 }
 
-.app .localstorage-info-container .info-table label span {
+.app .left .form-container form label input {
   background: white;
   display: block;
   font-size: 0.8em;
@@ -132,19 +52,94 @@
   border: 0pt;
 }
 
-.app .localstorage-info-container .info-table button {
+.app .left .form-container form label input:focus {
+  outline: 0;
+}
+
+.app .left .form-container form label .form-error {
+  margin-top: 5pt;
+  padding: 0 5pt;
+  border: solid 0pt red;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-color: red;
+  border-radius: 5px;
+  color: red;
+  font-size: 12pt;
+}
+
+.app .left .form-container form button {
   background: white;
   border: 0pt;
   border-radius: 5pt;
   float: right;
-  margin-top: 20pt;
-  margin-right: 20pt;
+  margin: 20pt;
   height: 30pt;
   width: 90pt;
   font-size: 1.2em;
 }
 
-.app .localstorage-info-container .info-table button:focus {
+.app .left .form-container form button:focus {
+  outline: 0;
+}
+
+.right {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 10% 80% 10%;
+      grid-template-columns: 10% 80% 10%;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  margin: 50pt 0pt 50pt 0pt;
+}
+
+.right .info-table {
+  -ms-grid-column: 2;
+  grid-column: 2;
+  background: #ec7036;
+  border-radius: 10pt;
+}
+
+.right .info-table h1 {
+  text-align: center;
+  font-size: 3em;
+  font-weight: 400;
+  margin-bottom: 1.5em;
+}
+
+.right .info-table label {
+  display: block;
+  font-size: 2em;
+  margin: 20pt 30pt 0 20pt;
+}
+
+.right .info-table label span {
+  background: white;
+  display: block;
+  font-size: 0.8em;
+  height: 1em;
+  line-height: 1em;
+  font-weight: 300;
+  padding: 2pt 5pt 2pt 5pt;
+  width: 100%;
+  margin-top: 5pt;
+  border-radius: 5pt;
+  border: 0pt;
+}
+
+.right .info-table button {
+  background: white;
+  border: 0pt;
+  border-radius: 5pt;
+  float: right;
+  margin: 20pt;
+  height: 30pt;
+  width: 90pt;
+  font-size: 1.2em;
+}
+
+.right .info-table button:focus {
   outline: 0;
 }
 
