--- a/src/css/App.css
+++ b/src/css/App.css
@@ -84,7 +84,16 @@
   outline: 0;
 }
 
-.right {
+.app .left .form-container form .invalid-input {
+  background: #ffc8c8;
+  border: 2pt solid red !important;
+}
+
+.app .left .form-container form .invalid-label {
+  color: red;
+}
+
+.app .right {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 10% 80% 10%;
@@ -94,27 +103,27 @@
   margin: 50pt 0pt 50pt 0pt;
 }
 
-.right .info-table {
+.app .right .info-table {
   -ms-grid-column: 2;
   grid-column: 2;
   background: #ec7036;
   border-radius: 10pt;
 }
 
-.right .info-table h1 {
+.app .right .info-table h1 {
   text-align: center;
   font-size: 3em;
   font-weight: 400;
   margin-bottom: 1.5em;
 }
 
-.right .info-table label {
+.app .right .info-table label {
   display: block;
   font-size: 2em;
   margin: 20pt 30pt 0 20pt;
 }
 
-.right .info-table label span {
+.app .right .info-table label span {
   background: white;
   display: block;
   font-size: 0.8em;
@@ -128,7 +137,7 @@
   border: 0pt;
 }
 
-.right .info-table button {
+.app .right .info-table button {
   background: white;
   border: 0pt;
   border-radius: 5pt;
@@ -139,16 +148,7 @@
   font-size: 1.2em;
 }
 
-.right .info-table button:focus {
+.app .right .info-table button:focus {
   outline: 0;
-}
-
-.invalid-input {
-  background: #ffc8c8;
-  border: 2pt solid red !important;
-}
-
-.invalid-label {
-  color: red;
 }
 /*# sourceMappingURL=App.css.map */
